Update for zip and folders and fix for nested jars in sub folders
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@762051 13f79535-47bb-0310-9956-ffa450edef68